--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3315,7 +3315,7 @@ body.dark .notifications.active .notifications__open {
 }
 
 .sorting__line .sorting__search {
-  margin-right: 45px;
+  margin-right: 15px;
 }
 
 .sorting__input {
@@ -3501,6 +3501,7 @@ body.dark .sorting__action:hover {
 
 .dropdown__item {
   display: block;
+  cursor: pointer;
 }
 
 .dropdown__item:not(:last-child) {
@@ -3611,6 +3612,15 @@ body.dark .dropdown.active .dropdown__head {
 
 .products__row {
   display: table-row;
+  cursor: pointer;
+}
+.products__row:hover{
+  background: rgba(0, 0, 0, 0.05)
+}
+.customer_wrapper{
+  max-height: 740px;
+  overflow: auto;
+  position: relative;
 }
 
 .products__row_head .products__cell {
@@ -3620,14 +3630,21 @@ body.dark .dropdown.active .dropdown__head {
   line-height: 1.38462;
   font-weight: 500;
   color: #B2B3BD;
+  background: white;
+  z-index: 1;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
-
+body.dark .products__row_head .products__cell{
+  background: #242731;
+}
 .products__cell {
   display: table-cell;
   vertical-align: middle;
   padding-left: 20px;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-bottom: 1px solid #E4E4E4;
 }
 
@@ -3716,7 +3733,7 @@ body.dark .dropdown.active .dropdown__head {
 }
 
 .products__more {
-  padding-top: 40px;
+  padding-top: 20px;
   text-align: center;
 }
 
